--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="activeItem">#b30011</color>
+    <color name="activeItem">#03A9F4</color>
     <color name="main">#B30011</color>
     <color name="cross_1">#054666</color>
     <color name="cross_2">#0D5980</color>
