--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_5sdp"
-        android:layout_margin="@dimen/_5sdp">
+        android:layout_margin="@dimen/_3sdp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,14 +18,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:orientation="vertical"
-                android:layout_margin="@dimen/_3sdp">
+                android:paddingLeft="@dimen/_10sdp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/black"
                     android:text="Bún chả hà nội"
                     android:id="@+id/txtTitle"
-                    android:textSize="@dimen/_18sdp">
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_14sdp">
                 </TextView>
 
                 <TextView
