--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
 
@@ -47,7 +47,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1">
 
         <fragment
@@ -68,6 +68,36 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/alarmLayout"
+            android:layout_width="292dp"
+            android:layout_height="212dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:background="?attr/colorPrimary"
+            android:orientation="vertical"
+            android:weightSum="1">
+            <com.skyfishjy.library.RippleBackground
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/alarmRipple"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:rb_color="@color/rippelColor"
+                app:rb_duration="3000"
+                app:rb_radius="32dp"
+                app:rb_rippleAmount="4"
+                app:rb_scale="7">
+
+                <ImageView
+                    android:id="@+id/radioImage"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_80sdp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_access_alarms" />
+            </com.skyfishjy.library.RippleBackground>
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
