--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".FavoritesFragment">
 <Button
+    android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_50sdp"
     android:id="@+id/addItem"
