--- a/app/src/main/res/layout/result_list_item.xml
+++ b/app/src/main/res/layout/result_list_item.xml
@@ -1,29 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:orientation="horizontal">
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.CardView
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/_5sdp"
+    android:layout_margin="@dimen/_3sdp">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-      >
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_weight="4"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/_10sdp">
             <TextView
-                android:text="TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/name" />
+                android:textColor="@android:color/black"
+                android:text="Bún chả hà nội"
+                android:id="@+id/name"
+                android:textStyle="bold"
+                android:textSize="@dimen/_14sdp">
+            </TextView>
 
             <TextView
-                android:text="TextView"
                 android:layout_width="match_parent"
+                android:id="@+id/vicinity"
                 android:layout_height="wrap_content"
-                android:id="@+id/vicinity" />
+                android:text="Khu K1-G3, Đường D1, Khu Công nghệ cao, Phường Tân Phú, Quận 9, Hồ Chí Minh">
+
+            </TextView>
         </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/btnFavoriteItem"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_star_border"/>
+        </LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
 </LinearLayout>
